--- a/TCP-server-concurrent/TCP-server-concurrent/TCP-server-concurrent.csproj
+++ b/TCP-server-concurrent/TCP-server-concurrent/TCP-server-concurrent.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ClassLibrary">
       <HintPath>ExternDll\ClassLibrary.dll</HintPath>
     </Reference>
